@startuml
'https://plantuml.com/class-diagram

'skinparam Linetype ortho
skin rose
title "Ejercicio Micros versión Patrones"

class Persona {
    - abordarMicroEstrategia

    + subirAlMicro()
}

interface IAbordarMicro {
    - abordarMicroEstrategia(m: Micro, p: Persona)
    + subirAlMicro()
}

class Apurado implements IAbordarMicro {}
class Obsecuente implements IAbordarMicro {}
class Moderado implements IAbordarMicro {}
class Fiaca implements IAbordarMicro {}

class Micro {}
class Persona {}
class BuilderPersona {
    + reset()
    + build(): Persona
    + setEstrategia()
    + setNombre()
    + setDni()
    --
    + build(): Persona
}

class Directora {
    - builder: BuilderPersona
    + constructor(b: BuilderPersona)
    + construirEmpleadoApurado()
    + construirEmpleadoObsecuente()
    + construirEmpleadoModerado()
    + construirEmpleadoFiaca()
}

' relaciones
Persona *-r- IAbordarMicro
BuilderPersona --> Persona
Directora *-- BuilderPersona

@enduml